change dialog title

--- a/src/app/shared/acceptable-use-dialog/acceptable-use-dialog.component.html
+++ b/src/app/shared/acceptable-use-dialog/acceptable-use-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Terms of Acceptable Use</h1>
+<h1 mat-dialog-title>CeR Services Acceptable Use</h1>
 <mat-dialog-content>
   <b>By using Centre for eResearch (CeR) services, you agree to:</b>
   <ul>
