--- a/src/app/modules/cer-services/request-storage/request-storage.component.html
+++ b/src/app/modules/cer-services/request-storage/request-storage.component.html
@@ -556,7 +556,8 @@
 
           <!-- Temporary modified for MVP1 -->
           <!-- <button mat-raised-button color="accent" routerLink="/service/research-storage">Back to Research Storage</button> -->
-          <a href="{{researchHubUrl}}#/content/49"><button mat-raised-button color="accent">Back to Research
+          <a href="{{researchHubUrl}}/article/choosing-data-storage"><button mat-raised-button color="accent">Back to
+              Research
               Storage</button></a>
 
         </div>
