--- a/src/app/modules/cer-services/request-storage/request-storage.component.html
+++ b/src/app/modules/cer-services/request-storage/request-storage.component.html
@@ -504,7 +504,7 @@
           </div>
 
           <div class="form-group">
-            <h3>Is there anything else you would like to tell us?</h3>=
+            <h3>Is there anything else you would like to tell us?</h3>
             <mat-form-field floatLabel="never" class="no-floating-label input-full-width">
               <textarea matInput placeholder="Comments [optional]" formControlName="comments" type="text"></textarea>
             </mat-form-field>
