--- a/src/themes.scss
+++ b/src/themes.scss
@@ -1,9 +1,10 @@
 // Custom Theming for Angular Material
+@use '~@angular/material' as mat;
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
 
 // Include the common styles for Angular Material. Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // Material design colors generated with: http://mcg.mbitson.com/
 $dashboard-ui-teal: (
@@ -139,11 +140,11 @@ $dashboard-ui-navy: (
 );
 
 // Create the dashboard-ui app theme
-$dashboard-ui-primary: mat-palette($dashboard-ui-teal);
-$dashboard-ui-accent: mat-palette($dashboard-ui-orange);
-$dashboard-ui-warn: mat-palette($dashboard-ui-pink);
-$dashboard-ui-theme: mat-light-theme($dashboard-ui-primary, $dashboard-ui-accent, $dashboard-ui-warn);
-@include angular-material-theme($dashboard-ui-theme);
+$dashboard-ui-primary: mat.define-palette($dashboard-ui-teal);
+$dashboard-ui-accent: mat.define-palette($dashboard-ui-orange);
+$dashboard-ui-warn: mat.define-palette($dashboard-ui-pink);
+$dashboard-ui-theme: mat.define-light-theme($dashboard-ui-primary, $dashboard-ui-accent, $dashboard-ui-warn);
+@include mat.all-component-themes($dashboard-ui-theme);
 
 // Site wide measurements
 $width-page-max: 960px;
